Update resident-services-developer-guide.md
Signed-off-by: SwatiPeriwal <95334601+SwatiPeriwal@users.noreply.github.com>